--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,11 @@
       <artifactId>selenium-java</artifactId>
       <version>4.23.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.10.2</version>
+      <scope>hw_15</scope>
+    </dependency>
   </dependencies>
 </project>
