--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,10 @@
       <artifactId>gson</artifactId>
       <version>2.11.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.23.1</version>
+    </dependency>
   </dependencies>
 </project>
