--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <version>${maven-surefire-plugin-version}</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>TestNG.xml</suiteXmlFile>
+            <suiteXmlFile>runner.xml</suiteXmlFile>
           </suiteXmlFiles>
           <argLine>
             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
