--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <version>4.23.1</version>
     </dependency>
     <dependency>
+      <groupId>com.codeborne</groupId>
+      <artifactId>selenide</artifactId>
+      <version>7.4.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>7.10.2</version>
